feat: added enqueue function

--- a/storiWebApp/.env
+++ b/storiWebApp/.env
@@ -5,5 +5,8 @@ DB_PASSWORD=i$%YGxgB[Th]7(.Sj)?i+tK0hm65ktYC
 DB_NAME=stori_webapp
 
 AWS_ACCESS_KEY_ID=AKIAZL77TN4GSQY3X2UN
+AWS_REGION_NAME=us-east-1
 AWS_SECRET_ACCESS_KEY=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
 AWS_STORAGE_BUCKET_NAME=stori-tech-challenge
+
+SEND_BALANCE_QUEUE_URL=https://sqs.us-east-1.amazonaws.com/644244270861/StoriChallenge
