feat: styled webapp form page

--- a/storiWebApp/.env
+++ b/storiWebApp/.env
@@ -1,3 +1,5 @@
+DJANGO_SECRET_KEY=django-insecure-(ct#ekt=11w4i#y@e73=rc08+j-f8ixu)l_s1lh)ra8#bqli4f
+
 DB_HOST=stori-webapp.cd2osiqi15hq.us-east-1.rds.amazonaws.com
 DB_PORT=5432
 DB_USER=postgres
