feat: dockerize app

--- a/storiWebApp/.env
+++ b/storiWebApp/.env
@@ -1,10 +1,10 @@
 DJANGO_SECRET_KEY=django-insecure-(ct#ekt=11w4i#y@e73=rc08+j-f8ixu)l_s1lh)ra8#bqli4f
 
-DB_HOST=stori-webapp.cd2osiqi15hq.us-east-1.rds.amazonaws.com
+DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
-DB_PASSWORD=i$%YGxgB[Th]7(.Sj)?i+tK0hm65ktYC
-DB_NAME=stori_webapp
+DB_PASSWORD=temp_pa$$
+DB_NAME=storidb
 
 AWS_ACCESS_KEY_ID=AKIAZL77TN4GSQY3X2UN
 AWS_REGION_NAME=us-east-1
