feat: dockerize app

--- a/storiWebApp/docker-compose.yml
+++ b/storiWebApp/docker-compose.yml
@@ -1,6 +1,11 @@
 version: '3'
 
 services:
+  db:
+    image: postgres
+    environment:
+      POSTGRES_PASSWORD: postgres
+
   web:
     build: .
     command: bash -c "pipenv run python manage.py makemigrations && pipenv run python manage.py migrate && pipenv run python manage.py runserver 0.0.0.0:8000"
