--- a/storiWebApp/.env
+++ b/storiWebApp/.env
@@ -1,10 +1,10 @@
 DJANGO_SECRET_KEY=django-insecure-(ct#ekt=11w4i#y@e73=rc08+j-f8ixu)l_s1lh)ra8#bqli4f
 
-DB_HOST=localhost
+DB_HOST=db
 DB_PORT=5432
 DB_USER=postgres
-DB_PASSWORD=temp_pa$$
-DB_NAME=storidb
+DB_PASSWORD=postgres
+DB_NAME=postgres
 
 AWS_ACCESS_KEY_ID=AKIAZL77TN4GSQY3X2UN
 AWS_REGION_NAME=us-east-1
